--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@react-google-maps/api": "^2.19.2",
+    "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "concurrently": "^8.2.2",
     "framer-motion": "^10.16.5",
+    "gapi-script": "^1.2.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.292.0",
