--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "concurrently": "^8.2.2",
+    "flowbite": "^2.2.0",
     "framer-motion": "^10.16.5",
     "gapi-script": "^1.2.0",
     "leaflet": "^1.9.4",
@@ -30,6 +31,7 @@
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "tw-elements": "^1.0.0",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
