--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-oauth/google": "^0.12.1",
     "@react-three/drei": "^9.88.17",
     "@react-three/fiber": "^8.15.11",
+    "@types/three": "^0.158.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "concurrently": "^8.2.2",
@@ -33,6 +34,7 @@
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.158.0",
     "tw-elements": "^1.0.0",
     "use-places-autocomplete": "^4.0.1"
   },
