--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^8.2.2",
     "flowbite": "^2.2.0",
     "framer-motion": "^10.16.5",
+    "fuse.js": "^7.0.0",
     "gapi-script": "^1.2.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
